# remote-archive

./: Cargo.toml  README.MD
src/: adapter.rs  main.rs  reader.rs  remote_file.rs  utils.rs
src/file_types/: mod.rs  zip.rs
src/types/: mod.rs  zip.rs
