[package]
name = "remote-archive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
reqwest = { version = "0.11.12", features = ["socks"] }
structopt = { version = "0.3.26", default-features = false }
tokio = { version = "1.21.2", features = ["rt", "macros", "rt-multi-thread"] }
# ureq = { version = "2.5.0", features = ["socks-proxy"] }
# url = "2.3.1"
