[package]
name = "remote-archive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.9"
async-trait = "0.1.58"
futures = { version = "0.3.25", default-features = false, features = ["std", "alloc"] }
reqwest = { version = "0.11.12", features = ["socks"] }
tokio = { version = "1.21.2", features = ["rt", "macros", "rt-multi-thread"] }
