[package]
name = "remote-archive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.3.1"
argh = "0.1.10"
exact-reader = "0.1.1"
binrw = { version = "0.11.2", default-features = false, features = ["std"] }
ureq = { version = "2.5.0", features = ["socks-proxy"] }
